[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = "0.38.0"
subxt-signer = "0.38.0"
tokio = { version = "1.41", features = ["macros", "time", "rt-multi-thread"] }
parity-scale-codec = { version = "3.6.1",  features = ["bit-vec", "derive"] }
scale-info = { version = "2.10.0", features = ["bit-vec", "derive", "serde"] }
serde = { version = "1.0.197" ,features = ["alloc", "derive"]}
primitive-types = "0.13.1"
secp256k1 = { version = "0.28.0", features = ["recovery", "rand-std", "global-context"] }
sha3 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.4.1"
